fixed sub title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<header>
 		<nav>
 			<h1> An Admirable Trio</h1>
-			<h2> The 3 writers I Love;</h4>
+			<h2> The 3 writers I Love</h4>
 		</nav>
 	</header>
 	<main>
