refactored as per requirements

--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+	<div id="main">
 	<header>
 		<nav>
-			<h1> An Admirable Trio</h1>
+			<h1 id="title"> An Admirable Trio</h1>
 			<h2> The 3 writers I Love</h4>
 		</nav>
 	</header>
 	<main>
 		<div class="main-box">
-			<figure><img src="https://media.newyorker.com/photos/5c5371239d69a04dde6b2a5e/master/w_2560%2Cc_limit/TNYInterview-Murakami.jpg"> <figcaption> Haruki Murakami</figcaption></figure>
-			<figure><img src="https://media.npr.org/assets/img/2013/09/20/lahi_9780307265746_jkt_ap1_vert-fb14d1e9ae6a53a338fc705fdef83ef88393f8d2-s1600-c85.webp"><figcaption>Jhumpa Lahiri</figcaption></figure>	
-			<figure class="ishiguro"><img src="https://images1.penguinrandomhouse.com/author/14137"><figcaption>Kazuo Ishiguro</figcaption></figure>	
+			<figure id="img-div"><img id="image" src="https://media.newyorker.com/photos/5c5371239d69a04dde6b2a5e/master/w_2560%2Cc_limit/TNYInterview-Murakami.jpg"> <figcaption id="img-caption"> Haruki Murakami</figcaption></figure>
+			<figure id="img-div"><img id="image"  src="https://media.npr.org/assets/img/2013/09/20/lahi_9780307265746_jkt_ap1_vert-fb14d1e9ae6a53a338fc705fdef83ef88393f8d2-s1600-c85.webp"><figcaption id="img-caption">Jhumpa Lahiri</figcaption></figure>	
+			<figure  id="img-div" ><img id="image"  src="https://images1.penguinrandomhouse.com/author/14137"><figcaption id="img-caption">Kazuo Ishiguro</figcaption></figure>	
 		</div>
 		<div class="main-box">
-			<section class="bio-box">
+			<section id="tribute-info">
     			<h3>Here's a time line of Dr. Borlaug's life:</h3>
     			<ul>
 			      	<li><strong>1914</strong> - Born in Cresco, Iowa</li>
@@ -92,7 +93,7 @@
 			      	</li>
 			      	<li><strong>2009</strong> - dies at the age of 95.</li>
     			</ul></section>
-			<section class="bio-box">
+			<section id="tribute-info">
     			<h3>Here's a time line of Dr. Borlaug's life:</h3>
     			<ul>
 			      	<li><strong>1914</strong> - Born in Cresco, Iowa</li>
@@ -165,7 +166,7 @@
 			      	</li>
 			      	<li><strong>2009</strong> - dies at the age of 95.</li>
     			</ul></section>
-			<section class="bio-box">
+			<section id="tribute-info">
     			<h3>Here's a time line of Dr. Borlaug's life:</h3>
     			<ul>
 			      	<li><strong>1914</strong> - Born in Cresco, Iowa</li>
@@ -240,7 +241,7 @@
     			</ul></section></div>
 	</main>
 	<footer>
-		<h3>If you have time read more about them here: <br> <a href="">Murakami</a> <br> <a href=""> Lahiri </a> <br> <a href=""> Ishiguro </a></h3>
+		<h3>If you have time read more about them here: <br> <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Haruki_Murakami">Murakami</a> <br> <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Jhumpa_Lahiri"> Lahiri </a> <br> <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Kazuo_Ishiguro"> Ishiguro </a></h3>
 	</footer>
 </body>
 </html>
