--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div>
-        <img class="hero-image" src="\3255469.jpg" alt="Illustration of a girl with a laptop">
+        <img class="hero-image" src="3255469.jpg" alt="Illustration of a girl with a laptop">
     </div>    
 </div>
 
