--- a/index.html
+++ b/index.html
@@ -1,246 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Trio I &#128151</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
+    <title>Document</title>
 </head>
 <body>
-	<header>
-		<nav>
-			<h1> An Admirable Trio</h1>
-			<h2> The 3 writers I Love</h4>
-		</nav>
-	</header>
-	<main>
-		<div class="main-box">
-			<figure><img src="https://media.newyorker.com/photos/5c5371239d69a04dde6b2a5e/master/w_2560%2Cc_limit/TNYInterview-Murakami.jpg"> <figcaption> Haruki Murakami</figcaption></figure>
-			<figure><img src="https://media.npr.org/assets/img/2013/09/20/lahi_9780307265746_jkt_ap1_vert-fb14d1e9ae6a53a338fc705fdef83ef88393f8d2-s1600-c85.webp"><figcaption>Jhumpa Lahiri</figcaption></figure>	
-			<figure class="ishiguro"><img src="https://images1.penguinrandomhouse.com/author/14137"><figcaption>Kazuo Ishiguro</figcaption></figure>	
-		</div>
-		<div class="main-box">
-			<section class="bio-box">
-    			<h3>Here's a time line of Dr. Borlaug's life:</h3>
-    			<ul>
-			      	<li><strong>1914</strong> - Born in Cresco, Iowa</li>
-			      	<li>
-			        	<strong>1933</strong> - Leaves his family's farm to attend the
-			        	University of Minnesota, thanks to a Depression era program known as the
-			        	"National Youth Administration"
-			      	</li>
-			      	<li>
-			        	<strong>1935</strong> - Has to stop school and save up more money. Works
-			   		    in the Civilian Conservation Corps, helping starving Americans. "I saw
-			        	how food changed them", he said. "All of this left scars on me."
-			      	</li>
-			      	<li>
-			        	<strong>1937</strong> - Finishes university and takes a job in the US
-			        	Forestry Service
-			      	</li>
-			      	<li>
-			        	<strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets
-				        laid off due to budget cuts. Inspired by Elvin Charles Stakman, he
-				        returns to school study under Stakman, who teaches him about breeding
-			    	    pest-resistent plants.
-			      	</li>
-			      	<li>
-			        	<strong>1941</strong> - Tries to enroll in the military after the Pearl
-			        	Harbor attack, but is rejected. Instead, the military asked his lab to
-				        work on waterproof glue, DDT to control malaria, disinfectants, and
-			        	other applied science.
-			      	</li>
-			      	<li>
-			        	<strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology
-			      	</li>
-			      	<li>
-			        	<strong>1944</strong> - Rejects a 100% salary increase from Dupont,
-			        	leaves behind his pregnant wife, and flies to Mexico to head a new plant
-			        	pathology program. Over the next 16 years, his team breeds 6,000
-			        	different strains of disease resistent wheat - including different
-			        	varieties for each major climate on Earth.
-			      	</li>
-			      	<li>
-			        	<strong>1945</strong> - Discovers a way to grown wheat twice each
-			        	season, doubling wheat yields
-			      	</li>
-			      	<li>
-			        	<strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat
-			        	with a high-yeidling American breed, creating a strain that responds
-				        well to fertilizer. It goes on to provide 95% of Mexico's wheat.
-			      	</li>
-			      	<li>
-			        	<strong>1962</strong> - Visits Delhi and brings his high-yielding
-			        	strains of wheat to the Indian subcontinent in time to help mitigate
-			        	mass starvation due to a rapidly expanding population
-			      	</li>
-			      	<li><strong>1970</strong> - receives the Nobel Peace Prize</li>
-			      	<li>
-			        	<strong>1983</strong> - helps seven African countries dramatically
-			        	increase their maize and sorghum yields
-			      	</li>
-			      	<li>
-			        	<strong>1984</strong> - becomes a distinguished professor at Texas A&M
-			        	University
-			      	</li>
-			      	<li>
-			        	<strong>2005</strong> - states "we will have to double the world food
-			        	supply by 2050." Argues that genetically modified crops are the only way
-			        	we can meet the demand, as we run out of arable land. Says that GM crops
-			        	are not inherently dangerous because "we've been genetically modifying
-			        	plants and animals for a long time. Long before we called it science,
-			    	    people were selecting the best breeds."
-			      	</li>
-			      	<li><strong>2009</strong> - dies at the age of 95.</li>
-    			</ul></section>
-			<section class="bio-box">
-    			<h3>Here's a time line of Dr. Borlaug's life:</h3>
-    			<ul>
-			      	<li><strong>1914</strong> - Born in Cresco, Iowa</li>
-			      	<li>
-			        	<strong>1933</strong> - Leaves his family's farm to attend the
-			        	University of Minnesota, thanks to a Depression era program known as the
-			        	"National Youth Administration"
-			      	</li>
-			      	<li>
-			        	<strong>1935</strong> - Has to stop school and save up more money. Works
-			   		    in the Civilian Conservation Corps, helping starving Americans. "I saw
-			        	how food changed them", he said. "All of this left scars on me."
-			      	</li>
-			      	<li>
-			        	<strong>1937</strong> - Finishes university and takes a job in the US
-			        	Forestry Service
-			      	</li>
-			      	<li>
-			        	<strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets
-				        laid off due to budget cuts. Inspired by Elvin Charles Stakman, he
-				        returns to school study under Stakman, who teaches him about breeding
-			    	    pest-resistent plants.
-			      	</li>
-			      	<li>
-			        	<strong>1941</strong> - Tries to enroll in the military after the Pearl
-			        	Harbor attack, but is rejected. Instead, the military asked his lab to
-				        work on waterproof glue, DDT to control malaria, disinfectants, and
-			        	other applied science.
-			      	</li>
-			      	<li>
-			        	<strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology
-			      	</li>
-			      	<li>
-			        	<strong>1944</strong> - Rejects a 100% salary increase from Dupont,
-			        	leaves behind his pregnant wife, and flies to Mexico to head a new plant
-			        	pathology program. Over the next 16 years, his team breeds 6,000
-			        	different strains of disease resistent wheat - including different
-			        	varieties for each major climate on Earth.
-			      	</li>
-			      	<li>
-			        	<strong>1945</strong> - Discovers a way to grown wheat twice each
-			        	season, doubling wheat yields
-			      	</li>
-			      	<li>
-			        	<strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat
-			        	with a high-yeidling American breed, creating a strain that responds
-				        well to fertilizer. It goes on to provide 95% of Mexico's wheat.
-			      	</li>
-			      	<li>
-			        	<strong>1962</strong> - Visits Delhi and brings his high-yielding
-			        	strains of wheat to the Indian subcontinent in time to help mitigate
-			        	mass starvation due to a rapidly expanding population
-			      	</li>
-			      	<li><strong>1970</strong> - receives the Nobel Peace Prize</li>
-			      	<li>
-			        	<strong>1983</strong> - helps seven African countries dramatically
-			        	increase their maize and sorghum yields
-			      	</li>
-			      	<li>
-			        	<strong>1984</strong> - becomes a distinguished professor at Texas A&M
-			        	University
-			      	</li>
-			      	<li>
-			        	<strong>2005</strong> - states "we will have to double the world food
-			        	supply by 2050." Argues that genetically modified crops are the only way
-			        	we can meet the demand, as we run out of arable land. Says that GM crops
-			        	are not inherently dangerous because "we've been genetically modifying
-			        	plants and animals for a long time. Long before we called it science,
-			    	    people were selecting the best breeds."
-			      	</li>
-			      	<li><strong>2009</strong> - dies at the age of 95.</li>
-    			</ul></section>
-			<section class="bio-box">
-    			<h3>Here's a time line of Dr. Borlaug's life:</h3>
-    			<ul>
-			      	<li><strong>1914</strong> - Born in Cresco, Iowa</li>
-			      	<li>
-			        	<strong>1933</strong> - Leaves his family's farm to attend the
-			        	University of Minnesota, thanks to a Depression era program known as the
-			        	"National Youth Administration"
-			      	</li>
-			      	<li>
-			        	<strong>1935</strong> - Has to stop school and save up more money. Works
-			   		    in the Civilian Conservation Corps, helping starving Americans. "I saw
-			        	how food changed them", he said. "All of this left scars on me."
-			      	</li>
-			      	<li>
-			        	<strong>1937</strong> - Finishes university and takes a job in the US
-			        	Forestry Service
-			      	</li>
-			      	<li>
-			        	<strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets
-				        laid off due to budget cuts. Inspired by Elvin Charles Stakman, he
-				        returns to school study under Stakman, who teaches him about breeding
-			    	    pest-resistent plants.
-			      	</li>
-			      	<li>
-			        	<strong>1941</strong> - Tries to enroll in the military after the Pearl
-			        	Harbor attack, but is rejected. Instead, the military asked his lab to
-				        work on waterproof glue, DDT to control malaria, disinfectants, and
-			        	other applied science.
-			      	</li>
-			      	<li>
-			        	<strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology
-			      	</li>
-			      	<li>
-			        	<strong>1944</strong> - Rejects a 100% salary increase from Dupont,
-			        	leaves behind his pregnant wife, and flies to Mexico to head a new plant
-			        	pathology program. Over the next 16 years, his team breeds 6,000
-			        	different strains of disease resistent wheat - including different
-			        	varieties for each major climate on Earth.
-			      	</li>
-			      	<li>
-			        	<strong>1945</strong> - Discovers a way to grown wheat twice each
-			        	season, doubling wheat yields
-			      	</li>
-			      	<li>
-			        	<strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat
-			        	with a high-yeidling American breed, creating a strain that responds
-				        well to fertilizer. It goes on to provide 95% of Mexico's wheat.
-			      	</li>
-			      	<li>
-			        	<strong>1962</strong> - Visits Delhi and brings his high-yielding
-			        	strains of wheat to the Indian subcontinent in time to help mitigate
-			        	mass starvation due to a rapidly expanding population
-			      	</li>
-			      	<li><strong>1970</strong> - receives the Nobel Peace Prize</li>
-			      	<li>
-			        	<strong>1983</strong> - helps seven African countries dramatically
-			        	increase their maize and sorghum yields
-			      	</li>
-			      	<li>
-			        	<strong>1984</strong> - becomes a distinguished professor at Texas A&M
-			        	University
-			      	</li>
-			      	<li>
-			        	<strong>2005</strong> - states "we will have to double the world food
-			        	supply by 2050." Argues that genetically modified crops are the only way
-			        	we can meet the demand, as we run out of arable land. Says that GM crops
-			        	are not inherently dangerous because "we've been genetically modifying
-			        	plants and animals for a long time. Long before we called it science,
-			    	    people were selecting the best breeds."
-			      	</li>
-			      	<li><strong>2009</strong> - dies at the age of 95.</li>
-    			</ul></section></div>
-	</main>
-	<footer>
-		<h3>If you have time read more about them here: <br> <a href="">Murakami</a> <br> <a href=""> Lahiri </a> <br> <a href=""> Ishiguro </a></h3>
-	</footer>
+    <div>
+        <p class="color-info">
+            Background Color :<span class="blue-text"> rgb(125,129,189)</span>
+        </p>
+        <button onclick="changeColor()">
+            Click Me
+        </button>
+    </div>
+    <!-- <div class="bubble"></div> -->
 </body>
 </html>
